Refactored well-known implement
