# internal/server/terraform.go
@@ -3,8 +3,7 @@ package server
 import (
 	"context"
 	"github.com/Bermos/Alexandria/internal/gen/openapi"
-	"github.com/Bermos/Alexandria/internal/terraform_services"
-	"net/http"
+	"os"
 )
 
 type TerraformApiService struct {
@@ -15,8 +14,9 @@ func NewTerraformApiService() openapi.TerraformApiServicer {
 	return &TerraformApiService{}
 }
 
-func (s *TerraformApiService) WellKnownTerraformJsonGet(_ context.Context) (openapi.ImplResponse, error) {
-	return openapi.Response(http.StatusOK, terraform_services.GetEnabledServices()), nil
+func (s *TerraformApiService) TerraformModulesV1NamespaceNameSystemVersionsGet(ctx context.Context, namespace string, name string, system string) (openapi.ImplResponse, error) {
+	//TODO implement me
+	panic("implement me")
 }
 
 func (s *TerraformApiService) TerraformModulesV1NamespaceNameSystemVersionDownloadGet(ctx context.Context, namespace string, name string, system string, version string) (openapi.ImplResponse, error) {
@@ -24,17 +24,17 @@ func (s *TerraformApiService) TerraformModulesV1NamespaceNameSystemVersionDownlo
 	panic("implement me")
 }
 
-func (s *TerraformApiService) TerraformModulesV1NamespaceNameSystemVersionsGet(ctx context.Context, namespace string, name string, system string) (openapi.ImplResponse, error) {
-	//TODO implement me
-	panic("implement me")
-}
-
-func (s *TerraformApiService) TerraformProvidersV1NamespaceTypeVersionDownloadOsArchGet(ctx context.Context, namespace string, pType string, version string, os string, arch string) (openapi.ImplResponse, error) {
+func (s *TerraformApiService) TerraformModulesV1NamespaceNameSystemVersionPublishPut(ctx context.Context, namespace string, name string, system string, version string, file *os.File) (openapi.ImplResponse, error) {
 	//TODO implement me
 	panic("implement me")
 }
 
 func (s *TerraformApiService) TerraformProvidersV1NamespaceTypeVersionsGet(ctx context.Context, namespace string, pType string) (openapi.ImplResponse, error) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (s *TerraformApiService) TerraformProvidersV1NamespaceTypeVersionDownloadOsArchGet(ctx context.Context, namespace string, pType string, version string, os string, arch string) (openapi.ImplResponse, error) {
 	//TODO implement me
 	panic("implement me")
 }
